2010-04-13  Michael Wiegand <michael.wiegand@intevation.de>

	* tools/greenbone-nvt-sync: Increase VERSION to reflect the changes
	made yesterday.

2010-04-13  Geoff Galitz <geoff@eifel-consulting.eu>

	* openvassd/attack.c: changed SSH-DEBUG message to not include
	references directly to LSC checks.  This is to avoid confusion
	between credentials debugging and LSC troubleshooting.

2010-04-12  Michael Wiegand <michael.wiegand@intevation.de>

	* tools/greenbone-nvt-sync: Removed unnecessary and misleading message
	when the log file could not be accessed. Changed behaviour to log to
	stderr instead of stdout when logging to a file is not possible.

2010-04-08  Matthew Mundell <matthew.mundell@intevation.de>

	File missing from 2010-03-11 commit.

	* openvassd/hosts.c (hosts_pause_all, hosts_resume_all): New functions.
	Send pause and resume signal to host process.
	(hosts_read_client): Pause or resume if client gave associated command.

2010-04-06  Michael Wiegand <michael.wiegand@intevation.de>

	* tools/openvas-nvt-sync.in: Split showing of description in two
	separate case for interactive and API use to make description in GSA
	look better.

2010-04-06  Michael Wiegand <michael.wiegand@intevation.de>

	* tools/greenbone-nvt-sync: Added support for retrieving the version
	of the NVT collection. Removed support for 2.0 infrastructures, tidied
	up parameter handling and function definitions, added check for
	subscription file to self test.

2010-03-11  Matthew Mundell <matthew.mundell@intevation.de>

	Add soft pausing of scans.  Implementation of Change Request #45:
	OpenVAS-Scanner: add pausing of scans,
	http://www.openvas.org/openvas-cr-44.html.

	* openvassd/otp_1_0.h (client_request_t): Add CREQ_PAUSE_WHOLE_TEST and
	CREQ_RESUME_WHOLE_TEST.

	* openvassd/otp_1_0.c (otp_1_0_get_client_request): Add PAUSE_WHOLE_TEST
	and RESUME_WHOLE_TEST commands.

	* openvassd/ntp_11.h (NTP_PAUSE_WHOLE_TEST, NTP_RESUME_WHOLE_TEST): New
	defines.
